firefam-rs/tui/src/bottom_pane/snapshots/firefam_tui__bottom_pane__chat_composer__tests__image_placeholder_multiple.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"› [Image #1][Image #2]                                                                              "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"  ? help · / commands and skills                                                 100% context left  "
